--- a/src/styles/_details.scss
+++ b/src/styles/_details.scss
@@ -6,6 +6,7 @@
     flex-direction: row-reverse;
     padding: 120px 120px 0;
     justify-content: center;
+    align-items: center;
 
     .showDescription {
         display: flex;
@@ -14,17 +15,18 @@
         width: 50%;
         color: $primaryWhite;
 
-        p {
+        .showOverview {
             line-height: 1.8rem;
             padding: 0 60px;
             max-height: 300px;
-            overflow: scroll;
+            overflow-y: scroll;
         }
 
         .episodeGuide {
             display: flex;
 
             p {
+                line-height: 1.8rem;
                 padding: 0 10px;
             }
         }
@@ -52,6 +54,7 @@
             padding: 0 20px;
 
             p {
+                line-height: 1.8rem;
                 width: 100px;
                 padding: 5px;
                 text-align: center;
